--- a/style.css
+++ b/style.css
@@ -1,17 +1,20 @@
 *{
-    margin: 0;
-    padding: 0;
-    border: 0;
-    outline: 0;
+    margin:     0;
+    padding:    0;
+    border:     0;
+    outline:    0;
     box-sizing: border-box;
 
 }
+
+
+
 body{
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #388;
+    background-color: rgb(34, 107, 107);
 
 }
 
@@ -34,12 +37,11 @@ body{
     height: 100px;
     transform-style: preserve-3d;
     transition: 1s ease;
-
 }
 
 @keyframes rolling{
     50%{
-        transform: rotateX(455deg) rotateY(455deg);
+        transform: rotateX(450deg) rotateY(555deg) rotateZ(120deg);
 
     }
 }
@@ -91,11 +93,11 @@ body{
 
 }
 .right {
-    transform: rotateX(90deg) translateZ(50px)
+    transform: rotateY(90deg) translateZ(50px)
 
 }
 .left {
-    transform: rotateX(-90deg) translateZ(50px)
+    transform: rotateY(-90deg) translateZ(50px)
 
 }
 
@@ -113,10 +115,16 @@ body{
                 0       25px,
                 40px    25px,
                 0       50px,
-                40px    50px,
+                40px    50px;
 
 }
 .top::after{
+    margin: -30px 0 0 -30px;
+    box-shadow: 40px 40px;
+
+}
+
+.bottom::after {
     margin: -36px 0 0 -36px;
     box-shadow: 26px 26px,
                 52px 52px,
@@ -129,6 +137,7 @@ body{
     box-shadow: 40px 0,
                 0    40px,
                 40px 40px;
+
 }
 
 .left::after{
@@ -151,5 +160,12 @@ body{
 .roll:hover{
     color: #fff;
     background-color: #388e3c;
+    font-weight: bolder;
+
     
+}
+
+#myButton:active{
+    color: #fff;
+    background-color: #388e3c;
 }
